syntax = "proto3";
package grpc;

option go_package = ".;grpc";


message MultiplyRequest {
    int32 numberA = 1;
    int32 numberB = 2;
}

message MultiplyResponse {
    int32 result = 1;
}

service MultiplyService {
    rpc Multiply(MultiplyRequest) returns (MultiplyResponse) {}
}
